unpackaged/main/default/objects/Job__c/fields/Requires_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requires_Project_Manager__c</fullName>
    <description>If the Charge Total, (sum of all Costs and Charges - &#39;Charge Total&#39; field) is greater than or equal to 2000, then this Job (1 or more WOs) should have a PM allocated to it.</description>
    <formula>IF(Charge_Net__c&gt;=2000,true,false)</formula>
    <inlineHelpText>If the Job Charge Total is &gt;=£2000 then a Project Manager should be allocated to it</inlineHelpText>
    <label>Requires Project Manager</label>
    <type>Checkbox</type>
</CustomField>