unpackaged/main/default/objects/Job__c/fields/Requisition_Total_Pay__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Total_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Requisition Total Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>