unpackaged/main/default/objects/Job__c/fields/Send_payment_link_to_customer_via_email__c.field-meta.xml
<CustomField>
    <fullName>Send_payment_link_to_customer_via_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send payment link to customer via email</label>
    <type>Checkbox</type>
</CustomField>