unpackaged/main/default/objects/Job__c/fields/Site_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Job_Number__c</fullName>
    <label>Site Job Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>