unpackaged/main/default/objects/Job__c/fields/Sold_by__c.field-meta.xml
<CustomField>
    <fullName>Sold_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field requested by Alex bacon</description>
    <label>Sold By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs2</relationshipName>
    <type>Lookup</type>
</CustomField>