unpackaged/main/default/objects/Job__c/fields/Support_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_Form_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,&quot;https://aspect.co.uk&quot;,&quot;https://aspect.co.uk.hyv.gotest.it&quot;)&amp;
&quot;/forms/support/?&quot;&amp;
&quot;&amp;acc=&quot;&amp; Account__c &amp;
&quot;&amp;con=&quot; &amp;  Job_Raised_by__c &amp;
&quot;&amp;jid=&quot;&amp; Id &amp;
&quot;&amp;sid=&quot;&amp; Site__r.Id &amp;
&quot;&amp;job=&quot;&amp; Name &amp;
&quot;&amp;cli=&quot;&amp;SUBSTITUTE( Account__r.First_Name__c , &quot; &quot;, &quot;%20&quot;)&amp;&quot;%20&quot;&amp;SUBSTITUTE( Account__r.Last_Name__c , &quot; &quot;, &quot;%20&quot;)&amp;
&quot;&amp;ema=&quot;&amp;  Contact_Email_who_Raised_Job__c  &amp;
&quot;&amp;pho=&quot;&amp; SUBSTITUTE(Account__r.Phone,&quot; &quot;,&quot;&quot;)</formula>
    <label>Support Form URL</label>
    <type>Text</type>
</CustomField>