unpackaged/main/default/objects/Job__c/fields/T1A__c.field-meta.xml
<CustomField>
    <fullName>T1A__c</fullName>
    <formula>IF( ( Charge_Labour__c == 0  ) ,&quot;&quot;, &#39; Labour &#39; &amp;BR() )&amp;
IF( ( Charge_List_Price_Services__c  == 0  ) ,&quot;&quot;, &#39; List Price Service&#39; &amp;BR() )&amp;
IF( ( Charge_Discount_Total__c == 0 ) ,&quot;&quot;, &#39; Discount &#39; &amp;BR() &amp;BR() )&amp;
IF( ( Charge_Materials_Total__c  == 0 ) ,&quot;&quot;, &#39; Parts and Materials &#39; &amp;BR() )&amp;
IF( ( Charge_Call_Out__c == 0  ) ,&quot;&quot;, &#39; Call Out Fee &#39; &amp;BR() )&amp;
IF( ( Charge_ULEZ__c  == 0  ) ,&quot;&quot;, &#39; ULEZ Fee &#39; &amp;BR() )&amp;
IF( ( Charge_Collection_Fee__c  == 0  ) ,&quot;&quot;, &#39; Collection Fee &#39; &amp;BR() )&amp;
IF( ( Charge_Other_Item__c  == 0  ) ,&quot;&quot;, &#39; Other &#39; &amp;BR() ) &amp;
IF( ( Fixed_Price_Admin_Fee__c == 0  ) ,&quot;&quot;, &#39; Fixed Price Admin Fee&#39; &amp;BR() )</formula>
    <label>T1A</label>
    <type>Text</type>
</CustomField>