unpackaged/main/default/objects/Job__c/fields/T1B__c.field-meta.xml
<CustomField>
    <fullName>T1B__c</fullName>
    <formula>IF( (Charge_Labour__c == 0) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_Labour__c) &amp;BR() )&amp;
IF( (Charge_List_Price_Services__c == 0) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_List_Price_Services__c) &amp;BR() )&amp;
IF( (Charge_Discount_Total__c == 0) ,&quot;&quot;, &#39;- &#39; &amp; &#39;GBP &#39; &amp; TEXT(Charge_Discount_Total__c) &amp;BR() &amp;BR() )&amp;
IF( (Charge_Materials_Total__c == 0) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_Materials_Total__c) &amp;BR() )&amp;
IF( (Charge_Call_Out__c == 0) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_Call_Out__c) &amp;BR() )&amp;
IF( (Charge_ULEZ__c == 0) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_ULEZ__c) &amp;BR() )&amp;
IF( (Charge_Collection_Fee__c == 0) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_Collection_Fee__c) &amp;BR() )&amp;
IF( (Charge_Other_Item__c == 0 ) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Charge_Other_Item__c) &amp;BR() )&amp;
IF( (Fixed_Price_Admin_Fee__c == 0 ) ,&quot;&quot;, &#39;GBP &#39; &amp; TEXT(Fixed_Price_Admin_Fee__c) &amp;BR() )</formula>
    <label>T1B</label>
    <type>Text</type>
</CustomField>