unpackaged/main/default/objects/Job__c/fields/Temp_Key_Account_Req_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Temp_Key_Account_Req_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field created by Matthew Radoja to track jobs which have been processed by the &quot;retrospectively generate EPRs for completed Key account Jobs&quot; process. To be removed once auto process in place.</description>
    <inlineHelpText>Temporary field created by Matthew Radoja to track jobs which have been processed by the &quot;retrospectively generate EPRs for completed Key account Jobs&quot; process. To be removed once auto process in place.</inlineHelpText>
    <label>Temp Key Account Req Tracking</label>
    <type>Checkbox</type>
</CustomField>