unpackaged/main/default/objects/Job__c/fields/Testing_Only__c.field-meta.xml
<CustomField>
    <fullName>Testing_Only__c</fullName>
    <label>Testing Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>