unpackaged/main/default/objects/Job__c/fields/TI_online_checkbox__c.field-meta.xml
<CustomField>
    <fullName>TI_online_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box created for online booking job records</description>
    <label>TI online checkbox</label>
    <type>Checkbox</type>
</CustomField>