unpackaged/main/default/objects/Job__c/fields/tmp__c.field-meta.xml
<CustomField>
    <fullName>tmp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp field for admin use in bug tracking</description>
    <inlineHelpText>Temp field for admin use in bug tracking</inlineHelpText>
    <label>Temporary Admin</label>
    <type>Checkbox</type>
</CustomField>