unpackaged/main/default/objects/Job__c/fields/tmp_KA_epr_inv_link__c.field-meta.xml
<CustomField>
    <fullName>tmp_KA_epr_inv_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tmp_KA_epr_inv_link</label>
    <type>Checkbox</type>
</CustomField>