unpackaged/main/default/objects/Job__c/fields/To_Duplicate_Job_for_Pending_Estimate__c.field-meta.xml
<CustomField>
    <fullName>To_Duplicate_Job_for_Pending_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Duplicate Job for Pending Estimate Journey with Offer</description>
    <label>To Duplicate Job for Pending Estimate</label>
    <type>Checkbox</type>
</CustomField>