unpackaged/main/default/objects/Job__c/fields/Total_Cost_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Stage_2__c</fullName>
    <description>Total EPRs plus Total POs</description>
    <formula>(Cost_Material_PO__c) + Requisition_Total_Pay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total EPRs plus Total POs</inlineHelpText>
    <label>Total Cost (Stage 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>