unpackaged/main/default/objects/Job__c/fields/Total_Fixed_Price_Admin__c.field-meta.xml
<CustomField>
    <fullName>Total_Fixed_Price_Admin__c</fullName>
    <label>Total Fixed Price Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>