unpackaged/main/default/objects/Job__c/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>