unpackaged/main/default/objects/Job__c/fields/Total_ulez__c.field-meta.xml
<CustomField>
    <fullName>Total_ulez__c</fullName>
    <label>Total ulez</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>