unpackaged/main/default/objects/Job__c/fields/Trade_Group__c.field-meta.xml
<CustomField>
    <fullName>Trade_Group__c</fullName>
    <formula>text( Job_Type__r.Group_Lookup__r.Trade__r.Trade_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Group</label>
    <type>Text</type>
</CustomField>