unpackaged/main/default/objects/Job__c/fields/User_ticked_Approv_Process_Unlock_Record__c.field-meta.xml
<CustomField>
    <fullName>User_ticked_Approv_Process_Unlock_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who ticked the field &#39;Approval Process Unlock Record&#39;</description>
    <inlineHelpText>The User who ticked the field &#39;Approval Process Unlock Record&#39;</inlineHelpText>
    <label>User ticked Approv Process Unlock Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>