unpackaged/main/default/objects/Job__c/recordTypes/Job_Record_Type_A.recordType-meta.xml
<RecordType>
    <fullName>Job_Record_Type_A</fullName>
    <active>false</active>
    <label>Job Record Type A</label>
</RecordType>