unpackaged/main/default/objects/Job__c/recordTypes/Job_Record_Type_B.recordType-meta.xml
<RecordType>
    <fullName>Job_Record_Type_B</fullName>
    <active>true</active>
    <label>Job Record Type B</label>
</RecordType>