unpackaged/main/default/objects/Job__c/validationRules/EPR_below_Total_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>EPR_below_Total_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(Requisition_Total_Pay__c),
NOT(

OR(
$User.ProfileId&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.PHASE_2_Credit_Control_Manager.X15_Char_Profile_ID__c,
$User.ProfileId&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c


)

)

,
Requisition_Total_Pay__c  &gt;  Cost_Total__c
)</errorConditionFormula>
    <errorMessage>---------------------------------------------------------------------
The total value of &quot;Engineer Pay Requisitions&quot; for this Job cannot exceed the budgeted spend.
---------------------------------------------------------------------</errorMessage>
</ValidationRule>