unpackaged/main/default/objects/Job__c/validationRules/Test_Only_Created_by_RL.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Only_Created_by_RL</fullName>
    <active>false</active>
    <errorConditionFormula>Job_Raised_by__c  = &#39;0037E00000riUgC&#39;</errorConditionFormula>
    <errorMessage>this contact cannot create Jobs!!!</errorMessage>
</ValidationRule>