unpackaged/main/default/objects/Job__c/listViews/Affected_Fixed_Price_Jobs.listView-meta.xml
<ListView>
    <fullName>Affected_Fixed_Price_Jobs</fullName>
    <columns>UPDATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Trade_Group__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job_Type__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Charge_Discount_Total__c</columns>
    <columns>Site__c</columns>
    <columns>Price_Point__c</columns>
    <columns>Scope_of_Work__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Feed_Back_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Reactive</value>
    </filters>
    <filters>
        <field>Created_By_Profile_Name__c</field>
        <operation>equals</operation>
        <value>Engineer Partner Community</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>11/16/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Charge_Net__c</field>
        <operation>equals</operation>
        <value>GBP 0</value>
    </filters>
    <label>Affected Fixed Price  Jobs</label>
    <sharedTo>
        <group>Chumley_Admins</group>
    </sharedTo>
</ListView>