unpackaged/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Type__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Value__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Profit_Margin_new__c</columns>
    <columns>Profit_Margin__c</columns>
    <columns>Site__c</columns>
    <columns>Type__c</columns>
    <columns>Key_Account_PO_Ref_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Job Records</label>
</ListView>