unpackaged/main/default/objects/Job__c/listViews/All_Job_Records_Flood.listView-meta.xml
<ListView>
    <fullName>All_Job_Records_Flood</fullName>
    <columns>Account_Type__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Customer_Facing_Description__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Value__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Site__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Attendance_Notes_for_Office__c</columns>
    <columns>Combined_Scope_of_Works_for_All_WOs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/28/2021 12:00 AM</value>
    </filters>
    <label>All Job Records Flood</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>