unpackaged/main/default/objects/Job__c/listViews/All_Job_Records_GSR.listView-meta.xml
<ListView>
    <fullName>All_Job_Records_GSR</fullName>
    <columns>Job_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Job_Type_Trade__c</columns>
    <columns>Customer_Facing_Description__c</columns>
    <columns>Account_Type__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Value__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Site__c</columns>
    <columns>Key_Account_PO_Ref_Number__c</columns>
    <columns>PO_Number_for_Key_Accounts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/30/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Job_Type__c</field>
        <operation>contains</operation>
        <value>Gas Safety</value>
    </filters>
    <label>All Job Records GSR</label>
</ListView>