unpackaged/main/default/objects/Job__c/listViews/All_Job_Records_not_visit_complete.listView-meta.xml
<ListView>
    <fullName>All_Job_Records_not_visit_complete</fullName>
    <columns>Account_Type__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Value__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Profit_Margin_new__c</columns>
    <columns>Profit_Margin__c</columns>
    <columns>Site__c</columns>
    <columns>Type__c</columns>
    <columns>Key_Account_PO_Ref_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Ongoing,Approved by Client</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Cash</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>greaterThan</operation>
        <value>1/10/2022</value>
    </filters>
    <label>All Job Records not visit complete</label>
</ListView>