unpackaged/main/default/objects/Job__c/listViews/All_Job_Records_ongoing.listView-meta.xml
<ListView>
    <fullName>All_Job_Records_ongoing</fullName>
    <columns>Account_Type__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Value__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Profit_Margin_new__c</columns>
    <columns>Profit_Margin__c</columns>
    <columns>Site__c</columns>
    <columns>Type__c</columns>
    <columns>Key_Account_PO_Ref_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2022 12:00 AM</value>
    </filters>
    <label>All Job Records ongoing</label>
</ListView>