unpackaged/main/default/objects/Job__c/listViews/All_Job_Records_overnight.listView-meta.xml
<ListView>
    <fullName>All_Job_Records_overnight</fullName>
    <columns>Trade_Group__c</columns>
    <columns>Account_Type__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Value__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Site__c</columns>
    <columns>Type__c</columns>
    <columns>Key_Account_PO_Ref_Number__c</columns>
    <columns>PO_Number_for_Key_Accounts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/4/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>cash,credit</value>
    </filters>
    <label>All Job Records overnight</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>