unpackaged/main/default/objects/Job__c/listViews/ALL_Multi_Fixed_Price_JAN_22.listView-meta.xml
<ListView>
    <fullName>ALL_Multi_Fixed_Price_JAN_22</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Date_Time_Estimate_Approved_by_Customer__c</columns>
    <columns>Account__c</columns>
    <columns>Site__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Job_Type_Trade__c</columns>
    <columns>Status__c</columns>
    <columns>Charge_Net__c</columns>
    <columns>Key_Account_PO_Ref_Number__c</columns>
    <columns>Feed_Back_Notes__c</columns>
    <columns>Profit_Margin__c</columns>
    <columns>Scope_of_Work__c</columns>
    <columns>Specifications_Mats_suppliers__c</columns>
    <columns>Client_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Type_Trade__c</field>
        <operation>equals</operation>
        <value>Brickwork &amp; Paving,Carpentry,Decorating,Fencing,Gardening,Glazing,Handyman,Locksmithing,Partition walls &amp; ceilings,Plastering,Rubbish Removal,Tiling,Wallpapering,Windows &amp; Doors</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Ongoing,Closed,For Client Approval,Approved by Client,Rejected</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>notEqual</operation>
        <value>Key Account</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Reactive</value>
    </filters>
    <label>*ALL* Multi Fixed Price 22</label>
</ListView>